--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ header {
     justify-content: space-between;
     align-items: center;
     color: black;
+    z-index: 2;
 }
 
 nav {
@@ -62,7 +63,6 @@ main {
 
 table {
     position: relative;
-    z-index: -2;
 }
 
 
